# smbscan

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Pipfile  README.Docker.md  README.md  arg_parser.py  dev.requirements.txt  keywords.md  keywords.txt  local_logging.py  print.py  pyproject.toml  requirements.txt  scan.py  scan_internals.py  setup.py  smb_connect.py  smb_file_operations.py  smbscan.py  targets.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
smbscan/: arg_parser.py  local_logging.py  scan.py  scan_internals.py  smbscan.py
src/: scan.py  scan_internals.py  setup.py
tests/: test_get_shares.py  test_scan_internals.py
wordlists/: keywords.md  keywords.txt  patterns.md  patterns.txt
